add explaination for the alphazero model

--- a/explain/Understanding Policy.ipynb
+++ b/explain/Understanding Policy.ipynb
@@ -36,9 +36,9 @@
     "\n",
     "If a Queen is placed at the corner of the board there are 21 possible moves for that Queen. If the queen is placed in any of the centre 4 boxes then it has 27 possible moves (screenshots given below):\n",
     "\n",
-    "<img src=\"./explain/qcorner.png\">\n",
-    "<img src=\"./explain/qcentre.png\">\n",
-    "<img src=\"./explain/qcorner2.png\">\n",
+    "<img src=\"./qcorner.png\">\n",
+    "<img src=\"./qcentre.png\">\n",
+    "<img src=\"./qcorner2.png\">\n",
     "\n",
     "But in order to make a 100% generalised policy we need to have a policy that can operate on each tile in every direction. And we have 8 possible directions {N, NE, E, SE, S, SW, W, NW} So for each tile we can have 56 possible directions of movement (**NOTE: most of these will be illegal, pass through object, put piece off board, etc. these are masked later on.**). These are \"Queen moves\"(56), including the \"Knight moves\" for each position (8) and other moves (9) which make up the sum 73 (`56 + 8 + 9 = 73`).\n",
     "\n",
